--- a/html/templates/base.html
+++ b/html/templates/base.html
@@ -226,31 +226,31 @@
                 <ul class="collapse list-unstyled" id="pySubmenu">
 
                     <li class="active">
-                        <a href="#">NumPy</a>
+                        <a href="{{ url_for('num_py') }}">NumPy</a>
                     </li>
 
                     <li class="active">
-                        <a href="#">Pandas</a>
+                        <a href="{{ url_for('pandas') }}">Pandas</a>
                     </li>
 
                     <li class="active">
-                        <a href="#">SciPy</a>
+                        <a href="{{ url_for('scipy') }}">SciPy</a>
                     </li>
 
                     <li class="active">
-                        <a href="#">Keras</a>
+                        <a href="{{ url_for('keras') }}">Keras</a>
                     </li>
 
                     <li class="active">
-                        <a href="#">Scikit-Learn</a>
+                        <a href="{{ url_for('scikitlearn') }}">Scikit-Learn</a>
                     </li>
 
                     <li class="active">
-                        <a href="#">PyTorch</a>
+                        <a href="{{ url_for('pytorch') }}">PyTorch</a>
                     </li>
 
                     <li class="active">
-                        <a href="#">TensorFlow</a>
+                        <a href="{{ url_for('tensorflow') }}">TensorFlow</a>
                     </li>
                 </ul>
             </li>
