--- a/html/templates/base.html
+++ b/html/templates/base.html
@@ -51,7 +51,7 @@
                     Data</a>
                 <ul class="collapse list-unstyled" id="manSubmenu">
                     <li class="active">
-                        <a href="#">Finding Data</a>
+                        <a href="{{ url_for('finding_data') }}">Finding Data</a>
                     </li>
 
                     <li class="active">
