--- a/html/templates/MovingData.html
+++ b/html/templates/MovingData.html
@@ -44,33 +44,25 @@
                         <h5 class="mb-0">
                             <button class="btn btn-link collapsed" type="button" data-toggle="collapse"
                                     data-target="#hide2" aria-expanded="false" aria-controls="hide2">
-                                Breakdown
+                                Breakdown:
                             </button>
                         </h5>
                     </div>
                     <div id="hide2" class="collapse" aria-labelledby="head2" data-parent="#accordion">
                         <div class="card-body">
                             <div class="guide">
-                                <h3>This section contains a guide for how we setup our the projects RStudio Server
-                                    Environment:</h3>
-                                <br>
-                                <p>NOTE: This guide assumes that you already have RStudio Server setup with your
-                                    project.</p>
+                                <h3>This section contains a breakdown of how we completed this phase.</h3>
                                 <br><br>
-                                <ol>
-                                    <li>In your web browser, enter the host, followed by ":8787"</li>
-                                    <br>
-                                    <li>If successful, you will be redirected to the login screen for RStudio</li>
-                                    <br>
-                                    <li>Next, enter your credentials</li>
-                                    <br><img style="margin-left:2em" src="/templates/resources/rss/loginRStudio.png"
-                                             alt="Login RStudio" min-width="50%" height="50%"> <br>
-
-                                    <li>Upon successful entry, you will now be able to play around in the environment!
+                                <ul>
+                                    
+                                    <li>We ran into a lot of issues deciding how we were going to move the data onto the file server.
+                                         The initial idea was to have a light box element that we would add a button and upload that onto the server.
+                                        however, because the post request had to be done on a separate page. We decided to make a separate page designated for uploading.
+                                        and where able to successfully move the data onto the file server.
                                     </li>
-                                    <br><img style="margin-left:2em" src="/templates/resources/rss/interfaceRStudio.png"
-                                             alt="Home RStudio" min-width="50%" height="50%"> <br>
-                                </ol>
+                                    <br><img style="margin-left:2em" src="\Data2Int\html\templates\resources\rss\uploadPage.PNG"
+                                    alt="Upload Page" min-width="50%" height="50%"> <br>
+                                </ul>
                             </div>
                         </div>
                     </div>
@@ -86,21 +78,11 @@
                     </div>
                     <div id="hide3" class="collapse" aria-labelledby="head3" data-parent="#accordion">
                         <div class="card-body">
-                            <p>Using RStudio for the development of this project would not be an ideal solution. Here is
-                                why:</p>
+                            <p>Here is a summary of what we could do next time:</p>
                             <ul>
-                                <li>RStudio only supports development in R language, we use Python for the development
-                                    of the project
-                                </li>
-                                <li>Although it is somewhat compatible with D3.JS, it does not compare to the support
-                                    python has with it
-                                </li>
-                                <li>R has a steep learning curve, taking time to overcome that curve and understand it
-                                    will delay the development of the project
+                                <li>In the future we would prefer to find another way to upload the files without having the user to be redirected onto a different page.
                                 </li>
                             </ul>
-                            <p>While taking it both pros and cons of R language, we can make the conclusion that it
-                                would not be beneficial to the completion of this project.</p>
                         </div>
                     </div>
                 </div>
