--- a/html/templates/SuccessfulUpload.html
+++ b/html/templates/SuccessfulUpload.html
@@ -5,4 +5,8 @@
 
 <h1>SUCCESS!</h1>
 <h2>The file was uploaded successfully.</h2>
+<hr/>
+{% for data in raw_data %}
+    <p>{{ data }}</p>
+{% endfor %}
 {% endblock %}
