Adding webpages for predictive analysis submenu

--- a/html/templates/base.html
+++ b/html/templates/base.html
@@ -208,15 +208,15 @@
                     Analysis</a>
                 <ul class="collapse list-unstyled" id="preSubmenu">
                     <li class="active">
-                        <a href="#">Data Mining</a>
+                        <a href="{{ url_for('data_mining')}}">Data Mining</a>
                     </li>
 
                     <li class="active">
-                        <a href="#">Predictive Modelling</a>
+                        <a href="{{ url_for('predictive_modeling')}}">Predictive Modelling</a>
                     </li>
 
                     <li class="active">
-                        <a href="#">Machine Learning</a>
+                        <a href="{{ url_for('machine_learning')}}">Machine Learning</a>
                     </li>
                 </ul>
             </li>
