--- a/html/templates/base.html
+++ b/html/templates/base.html
@@ -144,31 +144,31 @@
                 <a href="#visualSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Visualizations</a>
                 <ul class="collapse list-unstyled" id="visualSubmenu">
                     <li class="active">
-                        <a href="#">Mathplotlib</a>
+                        <a href="{{ url_for('mathplotlib') }}">Mathplotlib</a>
                     </li>
 
                     <li class="active">
-                        <a href="#">Seaborn</a>
+                        <a href="{{ url_for('seaborn') }}">Seaborn</a>
                     </li>
 
                     <li class="active">
-                        <a href="#">Bokeh</a>
+                        <a href="{{ url_for('bokeh') }}">Bokeh</a>
                     </li>
 
                     <li class="active">
-                        <a href="#">Plotly</a>
+                        <a href="{{ url_for('plotly') }}">Plotly</a>
                     </li>
 
                     <li class="active">
-                        <a href="#">pydot</a>
+                        <a href="{{ url_for('pydot') }}">pydot</a>
                     </li>
 
                     <li class="active">
-                        <a href="#">D3</a>
+                        <a href="{{ url_for('d3') }}">D3</a>
                     </li>
 
                     <li class="active">
-                        <a href="#">Charts</a>
+                        <a href="{{ url_for('charts') }}">Charts</a>
                     </li>
                 </ul>
             </li>
