--- a/html/templates/bokeh.html
+++ b/html/templates/bokeh.html
@@ -7,4 +7,343 @@
 
     <hr>
 
+    <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
+        <li class="nav-item">
+            <a class="nav-link active" id="pills-description-tab" data-toggle="pill" href="#pills-description"
+               role="tab"
+               aria-controls="pills-description" aria-selected="false">Description</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" id="pills-visualizations-tab" data-toggle="pill" href="#pills-visualizations"
+               role="tab"
+               aria-controls="pills-visualizations" aria-selected="false">Creating Visualizations</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" id="pills-links-tab" data-toggle="pill" href="#pills-links"
+               role="tab"
+               aria-controls="pills-links" aria-selected="false">Links</a>
+        </li>
+    </ul>
+
+    <div class="tab-content" id="pills-tabContent">
+        <div class="tab-pane fade show active" id="pills-description" role="tabpanel"
+             aria-labelledby="pills-description-tab">
+            <p>Bokeh is a library used for creating interactive visualizations for modern web browsers. </p>
+
+            <p>Unlike other similar visualization libraries that exist for Python, Bokeh displays to the screen also utilizing HTML and JavaScript. Because of this,
+            Bokeh is a great choice of a library when choosing to incorporate them into web applications.</p>
+
+            <p>To install the Bokeh library, install onto your version of Python from command line using the following
+                command:</p>
+
+            <pre class="command-line language-bash" data-user="root" data-host="localhost" tabindex="0">
+                <code class="language-bash">
+                    <span class="command-line-prompt">
+                        <span data-user="root" data-host="localhost"></span>
+                        <span class="token builtin class-name">pip</span> install bokeh
+                    </span>
+                </code>
+            </pre><br>
+
+            <p>When rendering your visualization, you can use one of two methods to output it to the screen:</p>
+            <ol>
+                <li><b>output_file('filename.html')</b> - you can use this to write your visualization to a static HTML file.</li>
+                <li><b>output_notebook()</b> - this will render your visualization directly in Jupyter Notebook.</li>
+            </ol>
+
+            <p>However, note that the visualization won't actually be displayed on the screen until you call <b>show()</b></p>
+
+            <br>
+        </div>
+        <div class="tab-pane fade" id="pills-visualizations" role="tabpanel" aria-labelledby="pills-visualizations-tab">
+            <h3>Visualizations</h3>
+
+            <p>The bokeh library offers a wide variety of graphs, charts, and other visualizations to create with just a few lines of code.
+            The bokeh library offers the following visualizations to create:</p>
+
+            <ul>
+                <li>scatter markers</li>
+                <li>scatter plots</li>
+                <li>line graphs</li>
+                <li>bar graphs</li>
+                <li>box plots</li>
+                <li>histograms</li>
+            </ul>
+
+            <h4>Scatter Markers</h4>
+
+            <pre>
+                <code class="language-javascript">
+                    <script type="prism-python">
+                    from bokeh.plotting import figure, output_notebook, show
+
+                    # output to notebook
+                    output_notebook()
+
+                    # create figure
+                    p = figure(plot_width = 400, plot_height = 400)
+
+                    # add a circle renderer with
+                    # size, color and alpha
+                    p.circle([1, 2, 3, 4, 5], [4, 7, 1, 6, 3],
+                        size = 10, color = "navy", alpha = 0.5)
+
+                    # show the results
+                    show(p)
+                    </script>
+                </code>
+            </pre><br>
+
+            <img src="/templates/resources/bokeh-scatter-markers.png" alt="scatter markers drawn using bokeh">
+
+            <h4>Scatter Plots</h4>
+
+            <pre>
+                <code class="language-javascript">
+                    <script type="prism-python">
+                    # import necessary modules
+                    from bokeh.charts import Scatter, output_notebook, show
+                    import pandas as pd
+
+                    # output to notebook
+                    output_notebook()
+
+                    # read data in dataframe
+                    df = pd.read_csv(r"D:/kaggle / mcdonald / menu.csv")
+
+                    # create scatter plot
+                    p = Scatter(df, x = "Carbohydrates", y = "Saturated Fat",
+                        title = "Saturated Fat vs Carbohydrates",
+                        xlabel = "Carbohydrates", ylabel = "Saturated Fat",
+                        color = "orange")
+
+                    # show the results
+                    show(p)
+                    </script>
+                </code>
+            </pre><br>
+
+            <img src="/templates/resources/bokeh-scatter-plot.png" alt="scatter plot drawn using bokeh">
+
+            <h4>Line Graphs</h4>
+
+            <pre>
+                <code class="language-javascript">
+                    <script type="prism-python">
+                    # import modules
+                    from bokeh.plotting import figure, output_notebook, show
+
+                    # output to notebook
+                    output_notebook()
+
+                    # create figure
+                    p = figure(plot_width = 400, plot_height = 400)
+
+                    # add a line renderer
+                    p.line([1, 2, 3, 4, 5], [3, 1, 2, 6, 5],
+                        line_width = 2, color = "green")
+
+                    # show the results
+                    show(p)
+                    </script>
+                </code>
+            </pre><br>
+
+            <img src="/templates/resources/bokeh-line-graph.png" alt="line graph drawn using bokeh">
+
+            <h4>Bar Graphs</h4>
+
+            <pre>
+                <code class="language-javascript">
+                    <script type="prism-python">
+
+                    # import necessary modules
+                    import pandas as pd
+                    from bokeh.charts import Bar, output_notebook, show
+
+                    # output to notebook
+                    output_notebook()
+
+                    # read data in dataframe
+                    df = pd.read_csv(r"D:/kaggle/mcdonald/menu.csv")
+
+                    # create bar
+                    p = Bar(df, "Category", values = "Calories",
+                        title = "Total Calories by Category",
+                        legend = "top_right")
+
+                    # show the results
+                    show(p)
+                    </script>
+                </code>
+            </pre><br>
+
+            <img src="/templates/resources/bokeh-bar-graph.png" alt="bar graph drawn using bokeh">
+
+            <h4>Box Plots</h4>
+
+            <pre>
+                <code class="language-javascript">
+                    <script type="prism-python">
+                    # import necessary modules
+                    from bokeh.charts import BoxPlot, output_notebook, show
+                    import pandas as pd
+
+                    # output to notebook
+                    output_notebook()
+
+                    # read data in dataframe
+                    df = pd.read_csv(r"D:/kaggle / mcdonald / menu.csv")
+
+                    # create bar
+                    p = BoxPlot(df, values = "Protein", label = "Category",
+                        color = "yellow", title = "Protein Summary (grouped by category)",
+                        legend = "top_right")
+
+                    # show the results
+                    show(p)
+                    </script>
+                </code>
+            </pre><br>
+
+            <img src="/templates/resources/bokeh-box-plot.png" alt="box plot drawn using bokeh">
+
+            <h4>Histograms</h4>
+
+            <pre>
+                <code class="language-javascript">
+                    <script type="prism-python">
+                    # import necessary modules
+                    from bokeh.charts import Histogram, output_notebook, show
+                    import pandas as pd
+
+                    # output to notebook
+                    output_notebook()
+
+                    # read data in dataframe
+                    df = pd.read_csv(r"D:/kaggle / mcdonald / menu.csv")
+
+                    # create histogram
+                    p = Histogram(df, values = "Total Fat",
+                        title = "Total Fat Distribution",
+                        color = "navy")
+
+                    # show the results
+                    show(p)
+                    </script>
+                </code>
+            </pre><br>
+
+            <img src="/templates/resources/bokeh-histogram.png" alt="histogram drawn using bokeh">
+
+        </div>
+        <div class="tab-pane fade" id="pills-links" role="tabpanel" aria-labelledby="pills-links-tab">
+
+            <div class="accordion" id="accordionGuide-links">
+
+
+                <div class="card">
+                    <div class="card-header" id="headingOne">
+                        <h5 class="mb-0">
+                            <button class="btn btn-link" type="button" data-toggle="collapse"
+                                    data-target="#collapseOne"
+                                    aria-expanded="false" aria-controls="collapseOne">
+                                Bokeh - Official Website
+                            </button>
+                        </h5>
+                    </div>
+
+                    <div id="collapseOne" class="collapse" aria-labelledby="headingOne"
+                         data-parent="#accordionGuide-links">
+                        <div class="card-body">
+                            <div class="description">
+                                <a target="_blank" href="https://bokeh.org/">Link</a>
+                                <p><strong>Description</strong><br></p>
+                                <p>Official documentation for the Bokeh library</p>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+
+                <div class="card">
+                    <div class="card-header" id="headingTwo">
+                        <h5 class="mb-0">
+                            <button class="btn btn-link" type="button" data-toggle="collapse"
+                                    data-target="#collapseTwo"
+                                    aria-expanded="false" aria-controls="collapseTwo">
+                                Python Data Visualization with Bokeh
+                            </button>
+                        </h5>
+                    </div>
+
+                    <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo"
+                         data-parent="#accordionGuide-links">
+                        <div class="card-body">
+                            <div class="description">
+                                <a target="_blank"
+                                   href="https://www.youtube.com/watch?v=2TR_6VaVSOs">Link</a>
+                                <p><strong>Description</strong><br></p>
+                                <p>A YouTube tutorial on creating data visualizations in Python using the Bokeh library.</p>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+
+                <div class="card">
+                    <div class="card-header" id="headingThree">
+                        <h5 class="mb-0">
+                            <button class="btn btn-link" type="button" data-toggle="collapse"
+                                    data-target="#collapseThree"
+                                    aria-expanded="false" aria-controls="collapseThree">
+                                Data Visualization with Bokeh in Python, Part I: Getting Started
+                            </button>
+                        </h5>
+                    </div>
+
+                    <div id="collapseThree" class="collapse" aria-labelledby="headingThree"
+                         data-parent="#accordionGuide-links">
+                        <div class="card-body">
+                            <div class="description">
+                                <a target="_blank"
+                                   href="https://towardsdatascience.com/data-visualization-with-bokeh-in-python-part-one-getting-started-a11655a467d4">Link</a>
+                                <p><strong>Description</strong><br></p>
+                                <p>An in-depth tutorial/article on using Bokeh</p>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+
+                <div class="card">
+                    <div class="card-header" id="headingFour">
+                        <h5 class="mb-0">
+                            <button class="btn btn-link" type="button" data-toggle="collapse"
+                                    data-target="#collapseFour"
+                                    aria-expanded="false" aria-controls="collapseFour">
+                                Bokeh Cheat Sheet
+                            </button>
+                        </h5>
+                    </div>
+
+                    <div id="collapseFour" class="collapse" aria-labelledby="headingFour"
+                         data-parent="#accordionGuide-links">
+                        <div class="card-body">
+                            <div class="description">
+                                <a target="_blank"
+                                   href="https://datacamp-community-prod.s3.amazonaws.com/f0c1e06f-53ba-4f3b-aa9f-b196221f55a3">Link</a>
+                                <p><strong>Description</strong><br></p>
+                                <p>A handy cheatsheet for the Bokeh library created by DataCamp</p>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+
+            </div>
+        </div>
+    </div>
+
+
 {% endblock %}
