--- a/html/templates/SuccessfulUpload.html
+++ b/html/templates/SuccessfulUpload.html
@@ -3,10 +3,20 @@
 
 {% block content %}
 
+<div class="loader-wrapper">
+    <span class="loader"><span class="loader-inner"></span></span>
+  </div>
+  <script>
+    jQuery(document).ready(function($){
+      $(".loader-wrapper").fadeOut(1500);
+    });
+</script> 
 <h1>SUCCESS!</h1>
 <h2>The file was uploaded successfully.</h2>
 <hr/>
 {% for table in tables %}
-    {{ table|safe }}
+{{ table|safe }}
 {% endfor %}
+</div>
+
 {% endblock %}
