adding pages for descriptive analysis submenu

--- a/html/templates/base.html
+++ b/html/templates/base.html
@@ -69,35 +69,35 @@
                     Analysis</a>
                 <ul class="collapse list-unstyled" id="pageSubmenu">
                     <li class="active">
-                        <a href="#">Data Frame</a>
+                        <a href="{{ url_for('dataframe') }}">Data Frame</a>
                     </li>
 
                     <li class="active">
-                        <a href="#">Descriptive Statistics</a>
+                        <a href="{{ url_for('descriptive_statistics') }}">Descriptive Statistics</a>
                     </li>
 
                     <li class="active">
-                        <a href="#">Histograms</a>
+                        <a href="{{ url_for('histograms') }}">Histograms</a>
                     </li>
 
                     <li class="active">
-                        <a href="#">Scatter plots</a>
+                        <a href="{{ url_for('scatterplots') }}">Scatter plots</a>
                     </li>
 
                     <li class="active">
-                        <a href="#">Coefficient of Variance</a>
+                        <a href="{{ url_for('coefficient_of_variance') }}">Coefficient of Variance</a>
                     </li>
 
                     <li class="active">
-                        <a href="#">Standard Deviation</a>
+                        <a href="{{ url_for('standard_deviation') }}">Standard Deviation</a>
                     </li>
 
                     <li class="active">
-                        <a href="#">Missing Data</a>
+                        <a href="{{ url_for('missing_data') }}">Missing Data</a>
                     </li>
 
                     <li class="active">
-                        <a href="#">Outliers</a>
+                        <a href="{{ url_for('outliers') }}">Outliers</a>
                     </li>
                 </ul>
             </li>
@@ -107,35 +107,35 @@
                     Analysis</a>
                 <ul class="collapse list-unstyled" id="dataSubmenu">
                     <li class="active">
-                        <a href="#">Correlations</a>
+                        <a href="{{ url_for('corr') }}">Correlations</a>
                     </li>
 
                     <li class="active">
-                        <a href="#">Aggregation</a>
+                        <a href="{{ url_for('aggr') }}">Aggregation</a>
                     </li>
 
                     <li class="active">
-                        <a href="#">Ranking</a>
+                        <a href="{{ url_for('rank') }}">Ranking</a>
                     </li>
 
                     <li class="active">
-                        <a href="#">TimeSeries</a>
+                        <a href="{{ url_for('time') }}">TimeSeries</a>
                     </li>
 
                     <li class="active">
-                        <a href="#">Maps</a>
+                        <a href="{{ url_for('mmap') }}">Maps</a>
                     </li>
 
                     <li class="active">
-                        <a href="#">Flow or Neural Networks</a>
+                        <a href="{{ url_for('flow') }}">Flow or Neural Networks</a>
                     </li>
 
                     <li class="active">
-                        <a href="#">Regressions</a>
+                        <a href="{{ url_for('regr') }}">Regressions</a>
                     </li>
 
                     <li class="active">
-                        <a href="#">SEM</a>
+                        <a href="{{ url_for('sem') }}">SEM</a>
                     </li>
                 </ul>
             </li>
@@ -178,27 +178,27 @@
                     Analysis</a>
                 <ul class="collapse list-unstyled" id="bisSubmenu">
                     <li class="active">
-                        <a href="#">Customer</a>
+                        <a href="{{ url_for('customer') }}">Customer</a>
                     </li>
 
                     <li class="active">
-                        <a href="#">Social Media</a>
+                        <a href="{{ url_for('social') }}">Social Media</a>
                     </li>
 
                     <li class="active">
-                        <a href="#">Cost Analysis</a>
+                        <a href="{{ url_for('cost') }}">Cost Analysis</a>
                     </li>
 
                     <li class="active">
-                        <a href="#">Production Analysis</a>
+                        <a href="{{ url_for('production_analysis') }}">Production Analysis</a>
                     </li>
 
                     <li class="active">
-                        <a href="#">Quality Analysis</a>
+                        <a href="{{ url_for('quality') }}">Quality Analysis</a>
                     </li>
 
                     <li class="active">
-                        <a href="#">Market Analysis</a>
+                        <a href="{{ url_for('market') }}">Market Analysis</a>
                     </li>
                 </ul>
             </li>
