--- a/html/templates/SuccessfulUpload.html
+++ b/html/templates/SuccessfulUpload.html
@@ -4,9 +4,27 @@
 {% block content %}
 
 <h1>SUCCESS!</h1>
-<h2>The file was uploaded successfully.</h2>
+<h2>The file: {{collectionname}} was uploaded successfully.</h2>
 <hr/>
 {% for table in tables %}
     {{ table|safe }}
 {% endfor %}
+
+
+<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+<script src="https://d3js.org/d3.v4.min.js"></script>
+<script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
+<div id="scatterplot">
+</div>
+<style>
+    .bubbles {
+      stroke-width: 2px;
+      stroke: white;
+    }
+    .bubbles:hover {
+      stroke: black;
+    }
+</style>
+<script src="/static/js/scatterPlot.js"></script>
+
 {% endblock %}
